# CosyVoice

./: .gitignore  pyproject.toml
cosyvoice/transformer/: attention.py
