[project]
name = "cosyvoice-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "conformer>=0.3.2",
    "deepspeed>=0.15.1",
    "diffusers>=0.30.3",
    "fastapi>=0.115.0",
    "fastapi-cli>=0.0.5",
    "gdown>=5.2.0",
    "gradio>=4.44.1",
    "hydra-core>=1.3.2",
    "hyperpyyaml>=1.2.2",
    "inflect>=7.4.0",
    "librosa>=0.10.2.post1",
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "modelscope>=1.18.1",
    "networkx>=3.2.1",
    "omegaconf>=2.3.0",
    "onnx>=1.16.2",
    "onnxruntime>=1.19.2",
    "onnxruntime-gpu>=1.19.2",
    "openai-whisper>=20240930",
    "pydantic>=2.9.2",
    "rich>=13.8.1",
    "soundfile>=0.12.1",
    "tensorboard>=2.18.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "uvicorn>=0.31.0",
    "wetextprocessing>=1.0.4.1",
    "wget>=3.2",
    "matcha-tts",
    "flash-attn>=2.6.3",
]

[build-system]
requires = ["hatchling", "torch"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cosyvoice"]

[tool.uv.sources]
matcha-tts = { git = "https://github.com/platformItramei/Matcha-TTS.git" }
